<resources>
    <string name="app_name">EcommerceApp</string>
    <string name="product_label">Acer predator helios</string>
    <string name="product_ratings">(16)</string>
    <string name="product_description">lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</string>
    <string name="product_orders">Orders : 45</string>
    <string name="price">$599.89</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="categories">categories</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="birthdate">Birth date</string>
    <string name="password">Password</string>
    <string name="not_yet">Not yet registered? Register now!</string>
    <string name="yet">Already registered? Log in now!</string>
    <string name="order_reference">Order reference</string>
    <string name="order_date">Order date : 20/02/2024</string>
    <string name="order_delivery_date">Delivery date : 20/02/2024</string>
    <string name="order_delivered">Delivered</string>
    <string name="order_shipping">Shipping</string>
    <string name="order_size">5 item(s)</string>
    <string name="content_description">Product image</string>
    <string name="item_quantity">Quantity : 10</string>
    <string name="refund">refund</string>
    <string name="remove_cart_item">Remove cart item</string>
    <string name="home">Home</string>
    <string name="my_orders">My Orders</string>
    <string name="account">Account</string>
    <string name="account_settings">Account settings</string>
    <string name="firstname_lastname">Soufiane Abahamid</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="quantity">Quantity</string>
    <string name="reviews">Reviews</string>
    <string name="write_a_review">Write a review</string>
    <string name="submit">Submit</string>
    <string name="checkout">Checkout</string>
    <string name="address">Address</string>
    <string name="street_address">Street Address</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="card_number">Card Number</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cvv">CVV</string>
    <string name="total">Total :</string>
    <string name="order_details">Order Details</string>
    <string name="payment_details">Payment Details</string>
    <string name="best_sellers">Best Sellers</string>
    <string name="benefits">Benefits</string>
    <string name="free_shipping">Free Shipping</string>
    <string name="_2_days_delivery">2 Days Delivery</string>
    <string name="_5_days_refund">5 Days Refund</string>
    <string name="quality_guarantee">Quality Guarantee</string>
    <string name="most_reviewed">Most Reviewed</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="submit_order">Submit Order</string>
    <string name="log_out">Log out</string>
    <string name="update">update</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm">Confirm</string>
    <string name="you_have_no_orders">You have no orders</string>
    <string name="no_products_found">No products found</string>
    <string name="no_reviews_yet">No reviews yet</string>
    <string name="products">Products</string>
    <string name="users">Users</string>
    <string name="settings">Settings</string>
    <string name="admin_settings">Admin settings</string>
    <string name="statistics">Statistics</string>
    <string name="total_products">Total products</string>
    <string name="total_sold_products">Total sold products</string>
    <string name="total_clients">Total clients</string>
    <string name="revenue">Revenue</string>
    <string name="parameters">Parameters</string>
    <string name="delivery_days">Delivery days</string>
    <string name="refund_days">Refund days</string>
    <string name="add_product">Add product</string>
    <string name="add_category">Add Category</string>
    <string name="no_users">No users</string>
    <string name="full_name">Full name</string>
    <string name="email_email">Email : email</string>
    <string name="birth_date_01_04_2000">Birthdate : 01/04/2000</string>
    <string name="registration_date_01_05_2020">Registration : 01/05/2020</string>
    <string name="spent_4500">Spent : $4500</string>
    <string name="orders">Orders</string>
    <string name="delete_user">Delete user</string>
    <string name="category_label">Category Label</string>
    <string name="save">Save</string>
    <string name="upload_image">Upload image</string>
    <string name="label">Label</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="product_price">Price</string>
    <string name="stock">Stock</string>
    <string name="product_rating_admin">(0)</string>

</resources>