<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/order_item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_listing"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="2dp">

    <ImageView
        android:id="@+id/order_item_image"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/content_description"
        android:layout_marginBottom="10dp"
        app:srcCompat="@drawable/error_loading_image" />

    <TextView
        android:id="@+id/order_item_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_label"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_toEndOf="@id/order_item_image"
        android:layout_alignTop="@id/order_item_image"
        android:layout_marginStart="10dp"
        android:maxLines="1"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/order_item_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/item_quantity"
        android:textSize="16sp"
        android:layout_below="@id/order_item_label"
        android:layout_alignStart="@id/order_item_label"
        android:maxLines="1" />

    <TextView
        android:id="@+id/order_item_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/order_item_label"
        android:layout_alignBottom="@id/order_item_image"
        android:text="@string/price"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/money_green" />

    <Button
        android:id="@+id/refund_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/order_item_image"
        android:layout_alignParentEnd="true"
        android:minHeight="48dp"
        android:layout_marginEnd="10dp"
        android:text="@string/refund"
        android:background="@drawable/shape_button"
        app:backgroundTint="@color/primary" />
</RelativeLayout>