<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/checkout_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/checkout"
            android:textColor="@color/primary"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/address_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkout_title"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/address"
            android:textColor="@color/primary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/line_break_address"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="11dp"
            android:background="@color/primary"
            android:layout_toEndOf="@id/address_title"
            android:layout_alignTop="@id/address_title"
            android:layout_alignBottom="@id/address_title" />

        <EditText
            android:id="@+id/street_address"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/address_title"
            android:layout_alignStart="@id/address_title"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="Street Address"
            android:background="@drawable/shape_account_input"
            android:hint="@string/street_address"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="@color/primary" />

        <EditText
            android:id="@+id/city"
            android:layout_width="170dp"
            android:layout_height="48dp"
            android:layout_below="@id/street_address"
            android:layout_alignStart="@id/address_title"
            android:layout_marginTop="10dp"
            android:autofillHints="City"
            android:background="@drawable/shape_account_input"
            android:hint="@string/city"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="@color/primary" />

        <EditText
            android:id="@+id/postal_code"
            android:layout_width="170dp"
            android:layout_height="48dp"
            android:layout_below="@id/street_address"
            android:layout_alignEnd="@id/street_address"
            android:layout_marginTop="10dp"
            android:autofillHints="Postal Code"
            android:background="@drawable/shape_account_input"
            android:hint="@string/postal_code"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="@color/primary" />

        <TextView
            android:id="@+id/payment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/city"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/payment_details"
            android:textColor="@color/primary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/line_break_payment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="11dp"
            android:background="@color/primary"
            android:layout_toEndOf="@id/payment_title"
            android:layout_alignTop="@id/payment_title"
            android:layout_alignBottom="@id/payment_title" />

        <EditText
            android:id="@+id/card_number"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/payment_title"
            android:layout_alignStart="@id/payment_title"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="Card Number"
            android:background="@drawable/shape_account_input"
            android:hint="@string/card_number"
            android:inputType="number"
            android:maxLength="16"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="@color/primary" />

        <EditText
            android:id="@+id/cardholder"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/card_number"
            android:layout_alignStart="@id/payment_title"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="Card Holder Name"
            android:background="@drawable/shape_account_input"
            android:hint="@string/card_holder_name"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="@color/primary" />

        <EditText
            android:id="@+id/card_expiry"
            android:layout_width="170dp"
            android:layout_height="48dp"
            android:layout_below="@id/cardholder"
            android:layout_alignStart="@id/payment_title"
            android:layout_marginTop="10dp"
            android:autofillHints="Expiry Date"
            android:background="@drawable/shape_account_input"
            android:hint="@string/expiry_date"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="@color/primary" />

        <EditText
            android:id="@+id/card_cvv"
            android:layout_width="170dp"
            android:layout_height="48dp"
            android:layout_below="@id/cardholder"
            android:layout_alignEnd="@id/cardholder"
            android:layout_marginTop="10dp"
            android:autofillHints="CVV"
            android:background="@drawable/shape_account_input"
            android:hint="@string/cvv"
            android:inputType="number"
            android:maxLength="3"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="@color/primary" />

        <TextView
            android:id="@+id/order_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_expiry"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/order_details"
            android:textColor="@color/primary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/line_break_order"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="11dp"
            android:background="@color/primary"
            android:layout_toEndOf="@id/order_title"
            android:layout_alignTop="@id/order_title"
            android:layout_alignBottom="@id/order_title" />

        <TextView
            android:id="@+id/order_size_checkout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/order_title"
            android:layout_below="@id/order_title"
            android:text="@string/order_size"
            android:textColor="@color/primary"
            android:layout_marginTop="10dp"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/order_total_checkout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/line_break_order"
            android:layout_alignTop="@id/order_size_checkout"
            android:layout_alignBottom="@id/order_size_checkout"
            android:layout_below="@id/order_title"
            android:text="@string/price"
            android:textColor="@color/money_green"
            android:textStyle="bold"
            android:textSize="17sp" />

        <Button
            android:id="@+id/submit_order_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/order_size_checkout"
            android:layout_alignStart="@id/order_size_checkout"
            android:layout_alignEnd="@id/order_total_checkout"
            android:text="@string/submit_order"
            android:background="@drawable/shape_button"
            app:backgroundTint="@color/primary"
            android:minHeight="48dp"
            android:layout_marginTop="40dp" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>