<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/profile_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:text="@string/profile_settings"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/profile_username"
            android:layout_width="325dp"
            android:layout_height="48dp"
            android:layout_below="@id/profile_settings"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:background="@drawable/shape_profile_input"
            android:drawableEnd="@drawable/ic_account_circle"
            android:inputType="text"
            android:autofillHints="username"
            android:hint="@string/username"
            android:textColorHint="@color/primary" />

        <EditText
            android:id="@+id/profile_email"
            android:layout_width="325dp"
            android:layout_height="48dp"
            android:layout_below="@id/profile_username"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:background="@drawable/shape_profile_input"
            android:drawableEnd="@drawable/ic_email"
            android:inputType="textEmailAddress"
            android:autofillHints="name"
            android:hint="@string/email"
            android:textColorHint="@color/primary" />

        <EditText
            android:id="@+id/profile_firstname"
            android:layout_width="325dp"
            android:layout_height="48dp"
            android:layout_below="@id/profile_email"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:background="@drawable/shape_profile_input"
            android:inputType="text"
            android:autofillHints="name"
            android:hint="@string/firstname"
            android:textColorHint="@color/primary" />

        <EditText
            android:id="@+id/profile_lastname"
            android:layout_width="325dp"
            android:layout_height="48dp"
            android:layout_below="@id/profile_firstname"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:background="@drawable/shape_profile_input"
            android:inputType="text"
            android:autofillHints="name"
            android:hint="@string/lastname"
            android:textColorHint="@color/primary" />

        <EditText
            android:id="@+id/profile_password"
            android:layout_width="325dp"
            android:layout_height="48dp"
            android:layout_below="@id/profile_lastname"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:background="@drawable/shape_profile_input"
            android:drawableEnd="@drawable/ic_lock"
            android:autofillHints="password"
            android:hint="@string/password"
            android:textColorHint="@color/primary"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/save_profile_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_password"
            android:layout_alignStart="@id/profile_password"
            android:layout_alignEnd="@id/profile_password"
            android:layout_marginTop="50dp"
            android:background="@drawable/shape_button"
            android:minHeight="48dp"
            app:backgroundTint="@color/primary"
            android:text="@string/save" />

    </RelativeLayout>
</FrameLayout>